# ChangeLog for genkernel
# Copyright 2006-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_cmdline.sh,
  gen_compile.sh, gen_determineargs.sh, gen_initramfs.sh, gen_initrd.sh,
  gen_package.sh, genkernel:
  Get rid of the ENABLE_PEGASOS_HACKS hacks Add INTEGRATED_INITRAMFS option to
  optionally insert the generated initramfs directly into the kernel image
  Change default build order to build the kernel last to facilitate the
  INTEGRATED_INITRAMFS option Add GENZIMAGE option and change various checks
  from ENABLE_PEGASOS_HACKS to GENZIMAGE

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  Argh...Changing the right line helps

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  Change into initramfs-firmware-temp/ instead of
  initramfs-firmware-temp/lib/firmware/ before doing cpio

  12 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> generic/linuxrc,
  genkernel:
  Added a small debug statement to generic/linuxrc so we know when we're
  hitting the initrd code path. This is genkernel 3.4.10_pre5 for testing.

  12 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  Change to new temp directory so the firmware gets copied to the right place

  12 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  Copy firmware file with -L so we get the file instead of the symlink

  12 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  Fix another quoting malfunction

  12 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> alpha/busy-config,
  ia64/busy-config, mips/busy-config, parisc/busy-config,
  parisc64/busy-config, ppc/busy-config, ppc64/busy-config,
  sparc/busy-config, sparc64/busy-config, x86/busy-config,
  x86_64/busy-config:
  Explicitly enable MDADM and MDSTART in busy-config

  12 Mar 2008; Andrew Gaffney <agaffney@gentoo.org>
  patches/busybox/1.7.4/1.7.4-static-error.diff: