@@ -2,6 +2,11 @@
 # Copyright 2006-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_arch.sh,
+  gen_compile.sh, genkernel:
+  Add set_kernel_arch(), which maps the genkernel arch to the arch that the
+  kernel expects based on the version of the kernel
+
   13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_cmdline.sh,
   gen_compile.sh, gen_determineargs.sh, gen_initramfs.sh, gen_initrd.sh,
   gen_package.sh, genkernel:
